k3s/cluster/apps/replicated/static-web/workload/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web
  namespace: static-web
  labels:
    app.kubernetes.io/name: static-web
    app.kubernetes.io/component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: static-web
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: static-web
        app.kubernetes.io/component: app
    spec:
      nodeSelector:
        longhorn: "enabled"
      terminationGracePeriodSeconds: 30
      containers:
        - name: nginx
          image: binhex/arch-nginx
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: static-web-config
