k3s/cluster/apps/replicated/static-web/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-web
  namespace: static-web
  labels:
    app.kubernetes.io/name: static-web
    app.kubernetes.io/component: app
spec:
  ingressClassName: traefik
  rules:
    - host: mdegenaro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-web
                port:
                  number: 8080
    - host: www.mdegenaro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-web
                port:
                  number: 8080
